--- a/nginx.conf
+++ b/nginx.conf
@@ -43,6 +43,7 @@ http {
         listen       80;
         listen       [::]:80;
         server_name  _;
+	return 301 https://$host$request_uri/;
         location / {
     		proxy_pass http://backend;
     		proxy_set_header Host $host;
